# roadprintz_camera_calibration

./: CMakeLists.txt  package.xml
Data/: affinize_points.m  distort.m  points_to_target.m  t1a_columnarity.m  t1a_columnarity_analysis.m  t1a_columns.m  t1a_filling_analysis.m  t1a_filling_center.m  t1a_filling_corner.m  t1a_fov_analysis.m  t1a_poc.m  t1a_randnoise.m  t1a_randnoise_analysis.m  t1a_roundoff.m  t1a_roundoff_analysis.m  t1a_snoise_analysis.m  t1a_sscale.m  t1a_sscale_analysis.m  t1a_tscale.m  t1a_tscale_analysis.m
Data/columnarity/: distorted_1_0.csv  distorted_1_10.csv  distorted_1_15.csv  distorted_1_20.csv  distorted_1_25.csv  distorted_1_30.csv  distorted_1_35.csv  distorted_1_40.csv  distorted_1_45.csv  distorted_1_5.csv  distorted_1_50.csv  distorted_1_55.csv  distorted_1_60.csv  distorted_1_65.csv  distorted_1_70.csv  distorted_1_75.csv  distorted_1_80.csv  distorted_1_85.csv  distorted_1_90.csv  distorted_1_95.csv  distorted_2_0.csv  distorted_2_10.csv  distorted_2_15.csv  distorted_2_20.csv  distorted_2_25.csv  distorted_2_30.csv  distorted_2_35.csv  distorted_2_40.csv  distorted_2_45.csv  distorted_2_5.csv  distorted_2_50.csv  distorted_2_55.csv  distorted_2_60.csv  distorted_2_65.csv  distorted_2_70.csv  distorted_2_75.csv  distorted_2_80.csv  distorted_2_85.csv  distorted_2_90.csv  distorted_2_95.csv  (+80 more)
Data/columnarity_results/: columnarity_distorted.csv  columnarity_undistorted.csv
Data/filling_center/: distorted_10_15.csv  distorted_10_20.csv  distorted_10_25.csv  distorted_10_35.csv  distorted_10_40.csv  distorted_10_45.csv  distorted_10_5.csv  distorted_10_55.csv  distorted_10_65.csv  distorted_10_75.csv  distorted_10_95.csv  distorted_1_0.csv  distorted_1_10.csv  distorted_1_15.csv  distorted_1_20.csv  distorted_1_25.csv  distorted_1_30.csv  distorted_1_35.csv  distorted_1_40.csv  distorted_1_45.csv  distorted_1_5.csv  distorted_1_50.csv  distorted_1_55.csv  distorted_1_60.csv  distorted_1_65.csv  distorted_1_70.csv  distorted_1_75.csv  distorted_1_80.csv  distorted_1_85.csv  distorted_1_90.csv  distorted_1_95.csv  distorted_2_0.csv  distorted_2_10.csv  distorted_2_15.csv  distorted_2_20.csv  distorted_2_25.csv  distorted_2_30.csv  distorted_2_35.csv  distorted_2_40.csv  distorted_2_45.csv  (+343 more)
Data/filling_corner/: distorted_10_0.csv  distorted_10_10.csv  distorted_10_30.csv  distorted_10_50.csv  distorted_10_60.csv  distorted_10_70.csv  distorted_10_80.csv  distorted_10_85.csv  distorted_10_90.csv  distorted_1_0.csv  distorted_1_10.csv  distorted_1_15.csv  distorted_1_20.csv  distorted_1_25.csv  distorted_1_30.csv  distorted_1_35.csv  distorted_1_40.csv  distorted_1_45.csv  distorted_1_5.csv  distorted_1_50.csv  distorted_1_55.csv  distorted_1_60.csv  distorted_1_65.csv  distorted_1_70.csv  distorted_1_75.csv  distorted_1_80.csv  distorted_1_85.csv  distorted_1_90.csv  distorted_1_95.csv  distorted_2_0.csv  distorted_2_10.csv  (+346 more)
ceres_code/: calibration_file_reader.cpp  wsn_cam_calib_ceres.cpp  wsn_cam_calib_ceres_periphery.cpp  wsn_cam_calib_ceres_rand.cpp
launch/: st_publisher_lidar.launch
lester_base_calib_data/: arm_positions_left.csv  arm_positions_right.csv  des_jspace_poses_left.csv  des_jspace_poses_right.csv
matlab/: arm_positions.csv  data_plotter.m  detections.csv  distort.m  evaluate_distortion_rp.m  garbage.csv  generate_cam.m  generate_head.m  generate_intrinsic.m  generate_intrinsic_realistic.m  generate_thin.m  idata_0-0-0-01-01.csv  idata_0-0-50-0-0.csv  idata_1-1-0-0-0.csv  idata_1-1-50-0-0.csv  idata_1-1-50-01-01.csv  idata_nodist.csv  lefts.csv  lidar_camcal.m  linsep.m  plot_cam_ext.m  pointcloud_points.csv  rights.csv  synthetic_data_head.csv
src/: CAMERA_MONOTARGET_CAL.cpp  EXTRINSIC_MONOTARGET_READER.cpp  INTRINSIC_CAL.cpp  INTRINSIC_DETECT.cpp  LIDAR_CAMERA.cpp  calibration_file_reader.cpp  calibration_file_reader_CAMERA.cpp  calibration_file_reader_EXTRINSIC.cpp  calibration_file_reader_HEAD.cpp  circle_detector.cpp  lester_aruco.cpp  lester_shapematch.cpp  lidar_reader.cpp  roi_gen.cpp  tapes_detect.cpp  wsn_cam_calib_ceres.cpp  wsn_cam_calib_ceres_CAMERA.cpp  wsn_cam_calib_ceres_EXTRINSIC.cpp  wsn_cam_calib_ceres_HEAD.cpp  wsn_cam_calib_ceres_randnoise_EXTRINSIC.cpp
white_tape_data/: arm_positions.csv  detections.csv  pointcloud_points.csv  rois.csv
(+3977 files in other folders)
